--- a/Python_Test (1).ipynb
+++ b/Python_Test (1).ipynb
@@ -378,7 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'d': 0, 'a': 2, 'b': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7. Sort the previous dictionary by value\n",
+    "sorted_dict = dict(sorted(mydict.items(), key=lambda item: item[1]))\n",
+    "print(sorted_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -390,27 +409,8 @@
     }
    ],
    "source": [
-    "# 7. Sort the previous dictionary by value\n",
-    "sorted_by_key = dict(sorted(mydict.items(), key=lambda item: item[0], reverse=True))\n",
-    "print(sorted_by_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 2, 'b': 5, 'd': 0}\n"
-     ]
-    }
-   ],
-   "source": [
     "# 8. Sort the previous dictionary by key, in descending order\n",
-    "sorted_by_key_desc = dict(sorted(mydict.items(), key=lambda item: item[0], reverse=False))\n",
+    "sorted_by_key_desc = dict(sorted(mydict.items(), key=lambda item: item[0], reverse=True))\n",
     "print(sorted_by_key_desc)"
    ]
   },
